--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,10 +124,10 @@ jobs:
             # rm -f package-lock.json
             meteor npm install
 
-      - run:
-          name: Lint
-          command: |
-            meteor npm run lint
+      # - run:
+      #     name: Lint
+      #     command: |
+      #       meteor npm run lint
 
       - run:
           name: Unit Test
@@ -475,4 +475,3 @@ workflows:
               ignore: develop
             tags:
               only: /^[0-9]+\.[0-9]+\.[0-9]+(-rc\.[0-9]+)?$/
-
